compiler/testData/diagnostics/tests/collectionLiterals/kt34515.fir.kt
fun main() {
    <!UNSUPPORTED!>[]<!><!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!><!UNNECESSARY_NOT_NULL_ASSERTION!>!!<!>
}
